--- a/holbegram/pubspec.yaml
+++ b/holbegram/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^0.8.5 
   uuid: ^3.0.6
   bottom_navy_bar: ^6.1.0
+  flutter_staggered_grid_view: ^0.6.0
 
 dev_dependencies:
   flutter_test:
